--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -1,11 +1,11 @@
 name: IBM Cloud Deploy
 
-on:
+#on:
   workflow_dispatch:
   push:
     branches: [ master,test ]
-  schedule:
-    - cron: '0 2 * * 2'
+  #schedule:
+  #  - cron: '0 2 * * 2'
 
 defaults:
   run:
